--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
+
     <title>Weather-App</title>
   </head>
   <body>
+    <script src="js/stars.js"></script>
     <div class="container">
       <div class="app-title"><p>Weather</p></div>
       <div class="notification"></div>
@@ -17,9 +19,13 @@
           <p>- &deg; <span>C</span></p>
         </div>
         <div class="temperature-description"><p>-</p></div>
+        <div class="wind-speed"><p></p></div>
+        <div class="rainfall"><p></p></div>
+        <div class="sun-rise"><p></p></div>
         <div class="location"><p>-</p></div>
       </div>
     </div>
+
     <script src="js/app.js"></script>
   </body>
 </html>
